# smoldot

./: .gitignore  Alternative client  CODING_GUIDE.md  Cargo.toml  README.md  build.rs  crates.js  search-index.js  settings.html  source-files.js
.cargo/: config.toml
.config/: smoldot.dic  spellcheck.toml
.github/: CODEOWNERS  cargo-deny.toml  dependabot.yml  mergify.yml
.github/workflows/: audit.yml  cache-fill.yml  ci-post-workflow.yml  ci.yml  deploy.yml  deps-update.yml  periodic-cargo-update.yml
benches/: header.rs
doc-javascript/: hierarchy.html  index.html  modules.html
doc-javascript/assets/: highlight.css  navigation.js  search.js
doc-javascript/classes/: AddChainError.html  AlreadyDestroyedError.html  CrashError.html  JsonRpcDisabledError.html  MalformedJsonRpcError.html  QueueFullError.html
doc-javascript/functions/: start.html
doc-javascript/interfaces/: AddChainOptions.html  Chain.html  Client.html  ClientOptions.html  ClientOptionsWithBytecode.html  SmoldotBytecode.html
doc-javascript/types/: LogCallback.html
doc-rust/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
doc-rust/full_node/: all.html  fn.async_main.html  fn.main.html  fn.run.html  index.html  sidebar-items.js
doc-rust/search.index/: 000c19c67784.js  00520afe77db.js  0087e57915a7.js  00f77aa84e24.js  01c47a58cfcb.js  021b652bb6cc.js  0264e17408e5.js  02777e71f761.js  02b5a779e3e3.js  02d3649058d5.js  030d34ab0ec6.js  036d1dfca2ff.js  03f1a56553c3.js  03ffed927e9b.js  0432941e5ea9.js  047c8d73683e.js  048292dbba45.js  0497207dffb3.js  049a466a5cfb.js  04b0a08aad7b.js  04c37992d2cd.js  04e63fafad13.js  04f7fb89957e.js  0506c522cfb2.js  052f1bd21ec0.js  054eb9a42202.js  0574c148827b.js  05966d44e734.js  0606b944fdea.js  060ec81e4e9e.js  0636ee63a6af.js  063db445f076.js  066ea6fdbb17.js  06e4b2821cf0.js  06e5f9085eec.js  06e960856542.js  0731bfd57216.js  0749c1b337df.js  07bb9ed0020f.js  084324662951.js  (+513 more)
doc-rust/smoldot/: all.html  index.html  macro.signature!.html  macro.signature.html  sidebar-items.js
doc-rust/smoldot_full_node/: all.html  enum.LogLevel.html  enum.RelayChainSendJsonRpcRequestError.html  enum.StartError.html  fn.start.html  index.html  sidebar-items.js  struct.ChainConfig.html  struct.Client.html  struct.Config.html  struct.JsonRpcListenConfig.html  trait.LogCallback.html
doc-rust/smoldot_light/: all.html  enum.AddChainConfigJsonRpc.html  enum.AddChainError.html  enum.HandleRpcError.html  index.html  macro.log.html  macro.log_inner!.html  macro.log_inner.html  sidebar-items.js  struct.AddChainConfig.html  struct.AddChainSuccess.html  struct.ChainId.html  struct.Client.html  struct.ClientConfig.html  struct.JsonRpcResponses.html  struct.PeerId.html
examples/statement-chat/: .gitignore  README.md  dev.sh  index.html  main.js  package.json  server.js  statement.js
full-node/: Cargo.toml
full-node/src/: json_rpc_service.rs  network_service.rs
full-node/src/json_rpc_service/: chain_head_subscriptions.rs  requests_handler.rs
full_node/: all.html  fn.async_main.html  fn.background_open_database.html  fn.main.html  fn.open_database.html  index.html  sidebar-items.js
full_node/cli/: enum.CliChain.html  enum.ColorChoice.html  enum.NodeKeyParseError.html  enum.Output.html  index.html  sidebar-items.js  struct.CliOptions.html  struct.ColorChoiceParseError.html  struct.NodeKey.html  struct.OutputParseError.html
full_node/network_service/: enum.Event.html  enum.InitError.html  fn.connection_task.html  fn.multiaddr_to_socket.html  index.html  sidebar-items.js  struct.ChainConfig.html  struct.Config.html  struct.Guarded.html  struct.NetworkService.html
full_node/sync_service/: enum.ToDatabase.html  fn.start_database_write.html  fn.start_sync.html  index.html  sidebar-items.js  struct.BlocksRequestId.html  struct.Config.html  struct.SyncService.html  struct.SyncState.html
implementors/structopt/: trait.StructOpt.js  trait.StructOptInternal.js
lib/: Cargo.toml
lib/src/: libp2p.rs  network.rs
lib/src/chain/blocks_tree/: verify.rs
lib/src/json_rpc/: methods.rs  parse.rs
lib/src/json_rpc/service/: client_main_task.rs
lib/src/libp2p/: cid.rs  collection.rs
lib/src/libp2p/collection/: multi_stream.rs  single_stream.rs
lib/src/libp2p/connection/: established.rs
lib/src/libp2p/connection/established/: multi_stream.rs  single_stream.rs  substream.rs
lib/src/network/: bitswap_peering_strategy.rs  codec.rs  service.rs
lib/src/network/codec/: affinity.rs  bitswap.rs  statement.rs
lib/src/sync/: all.rs  all_forks.rs
lib/src/verify/: aura.rs  header_only.rs
light-base/: Cargo.toml
light-base/examples/: basic.rs  statement_test.rs  test_asset_hub.rs
light-base/src/: bitswap_service.rs  json_rpc_service.rs  lib.rs  network_service.rs  sync_service.rs
light-base/src/json_rpc_service/: background.rs
light-base/src/sync_service/: parachain.rs  paraheads.rs  standalone.rs  substrate_compat.rs
smoldot/: all.html  fn.calculate_genesis_block_header.html  index.html  sidebar-items.js
smoldot/author/: index.html  sidebar-items.js
smoldot/chain/: index.html  sidebar-items.js
smoldot/chain_spec/: index.html  sidebar-items.js  struct.ChainSpec.html  struct.LightSyncState.html  struct.ParseError.html
smoldot/database/: index.html  sidebar-items.js
smoldot/executor/: constant.DEFAULT_HEAP_PAGES.html  enum.CoreVersionError.html  enum.InvalidHeapPagesError.html  fn.core_version.html  fn.storage_heap_pages_to_value.html  index.html  sidebar-items.js  struct.CoreVersion.html  struct.CoreVersionApi.html  struct.CoreVersionApisRefIter.html  struct.CoreVersionRef.html
smoldot_js/: all.html  enum.AddChainError.html  index.html  sidebar-items.js  struct.AddChainConfig.html  struct.ChainId.html  struct.Client.html
src/: author.rs  chain.rs  chain_spec.rs  database.rs  events.rs  executor.rs  finality.rs  header.rs  identity.rs  informant.rs  json_rpc.rs  keystore.rs  lib.rs  libp2p.rs  metadata.rs  network.rs  ss58.rs  sync.rs  transactions.rs  trie.rs  util.rs  verify.rs
tests-coverage/: index.html
(+3221 files in other folders)
