[package]
name = "smoldot"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Primitives to build a client for Substrate-based blockchains"
repository = "https://github.com/paritytech/smoldot"
documentation = "https://docs.rs/smoldot"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"
readme = "README.md"
keywords = ["blockchain", "peer-to-peer"]

[workspace]
default-members = [".", "bin/full-node"]
members = [
    ".",
    "bin/full-node",
    "bin/light-base",
    "bin/wasm-node/rust",
]

[features]
default = ["database-sqlite", "std"]
database-sqlite = [
    "parking_lot",
    "sqlite",
    "std"   # A database stored on the filesystem can't reasonably work without a filesystem.
]
std = [
    "async-std",
    "futures/thread-pool",
    "schnorrkel/getrandom", # TODO: necessary for signing; clarify in docs and in source code
    "soketto",
    "wasmtime",
]

[dependencies]
# This section contains only no_std-compatible crates. See below for std-only crates.
#
# Before adding a crate here, please make sure that it is `no_std`-compatible. If a crate should
# theoretically be `no_std`-compatible (i.e. doesn't need the help of the operating system) but is
# not, or if things are sketchy, please leave a comment next to it.
arrayvec = { version = "0.7.2", default-features = false }
atomic = { version = "0.5.1", default-features = false }
bip39 = { version = "1.0.1", default-features = false }
blake2-rfc = { version = "0.2.18", default-features = false }
bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }
crossbeam-queue = { version = "0.3.2", default-features = false, features = ["alloc"] }
derive_more = "0.99.17"
ed25519-zebra = { version = "3.0.0", default-features = false }
either = { version = "1.6.1", default-features = false }
event-listener = { version = "2.5.1" }  # TODO: no-std-ize
fnv = { version = "1.0.7", default-features = false }
futures = "0.3.17"   # TODO: no-std-ize
hashbrown = { version = "0.11.2", default-features = false, features = ["serde"] }   # TODO: remove serde feature
hex = { version = "0.4.3", default-features = false }
hmac = { version = "0.12.0", default-features = false }
itertools = { version = "0.10.3", default-features = false }
# TODO: don't activate `static-context` by default; see https://github.com/paritytech/libsecp256k1/issues/77
libsecp256k1 = { version = "0.7.0", default-features = false, features = ["static-context"] }
# Reminder: `log` is forbidden
merlin = { version = "3.0", default-features = false }
nom = { version = "7.1.0", default-features = false, features = ["alloc"] }
no-std-net = { version = "0.6.0", default-features = false }
num-bigint = { version = "0.4.3", default-features = false }
num-rational = { version = "0.4.0", default-features = false, features = ["num-bigint"] }
num-traits = { version = "0.2.14", default-features = false }
pbkdf2 = { version = "0.10.0", default-features = false }
pin-project = "1.0.8"
prost = { version = "0.9.0", default-features = false, features = ["prost-derive"] }
rand = { version = "0.8.4", default-features = false, features = ["std", "std_rng"] }  # TODO: rand is used in hack-y ways at the moment ; these features should be removed
rand_chacha = { version = "0.3.1", default-features = false }
ruzstd = { version = "0.2.4" }  # TODO: doesn't support no_std :-/
schnorrkel = { version = "0.10.2", default-features = false, features = ["preaudit_deprecated", "u64_backend"] }
serde = { version = "1.0.136", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.72", default-features = false, features = ["alloc", "raw_value"] }
sha2 = { version = "0.10.0", default-features = false }
siphasher = { version = "0.3.7", default-features = false }
slab = { version = "0.4.5", default-features = false }
smallvec = "1.7.0"
snow = { version = "0.8.0", default-features = false, features = ["default-resolver"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
twox-hash = { version = "1.6.1", default-features = false }
wasmi = { version = "0.9.1", default-features = false, features = ["core"] }  # TODO: having to add `core` is sketchy; maybe report this

# `database-sqlite` feature
parking_lot = { version = "0.12.0", optional = true }
sqlite = { version = "0.26.0", optional = true, default-features = false, features = ["linkage"] }

# `std` feature
# Add here the crates that cannot function without the help of the operating system or environment.
async-std = { version = "1.10.0", optional = true }
soketto = { version = "0.7.1", optional = true }

# BELOW: DEPENDENCIES TO REMOVE
# TODO:
parity-scale-codec = { version = "2.3.1", features = ["derive"] } # TODO: a lot of unnecessary overhead in terms of memory allocations

[target.'cfg(target_arch = "x86_64")'.dependencies]
# `std` feature
wasmtime = { version = "0.27.0", default-features = false, features = ["async"], optional = true }

[build-dependencies]
prost-build = "0.9.0"

[dev-dependencies]
async-std = "1.10.0"
criterion = "0.3.5"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[profile.dev]
debug = 1    # Default value is `2`, which contains the full debug info. `1` is enough for stack traces.
opt-level = 2
panic = "abort"
[profile.dev.package."*"]
opt-level = 3

# The `test` profile mimics the `dev` profile to avoid recompilations.
[profile.test]
opt-level = 2
[profile.test.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
lto = true
#strip = "symbols"      # TODO: uncomment once stable

[profile.min-size-release]
inherits = "release"
lto = true
opt-level = "z"

[[bench]]
name = "header"
harness = false
