[package]
name = "smoldot-full-node"
version = "0.9.1"
description = "Substrate/Polkadot full node using smoldot"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
include.workspace = true
default-run = "full-node"

[[bin]]
name = "full-node"
path = "bin/main.rs"

[dependencies]
async-channel = { version = "2.5.0", default-features = false }
blake2-rfc = { version = "0.2.18", default-features = false }
clap = { version = "4.5.20", default-features = false, features = ["color", "derive", "help", "std", "suggestions", "usage"] }  # Note: enabling/disabling some features modifies the internal behavior of clap, be careful
ctrlc = "3.4.0"
derive_more = { version = "2.0", default-features = false, features = ["full"] }
directories = "5.0.1"
either = { version = "1.9.0", default-features = false }
event-listener = "5.3.0"
fnv = { version = "1.0.7", default-features = false }
futures-channel = "0.3.31"
futures-lite = { version = "2.3.0", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.27", default-features = false }
hashbrown = { version = "0.16.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
humantime = { version = "2.1.0", default-features = false }
lru = { version = "0.16.3", default-features = false, features = ["hashbrown"] }
mick-jaeger = "0.1.8"
rand = "0.10.0"
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.104", default-features = false, features = ["std"] }
siphasher = { version = "1.0.1", default-features = false }
soketto = { version = "0.8.0", features = ["deflate"] }
smol = "2.0.0"
smoldot = { version = "0.21.0", path = "../lib", default-features = false, features = ["database-sqlite", "std", "wasmtime"] }
terminal_size = "0.4.0"
zeroize = { version = "1.7.0", default-features = false, features = ["alloc"] }
